--- a/Musei/src/pages/mm-biglietti/mm-biglietti.scss
+++ b/Musei/src/pages/mm-biglietti/mm-biglietti.scss
@@ -96,9 +96,9 @@ page-mm-biglietti {
 }
 
 #paginaMmBiglietti.museo_musica {
-    background-image: url("../assets/imgs/home/Musica/MusicaContent/Musica_Content3.jpg");
-    background-size: cover;
-    background-position: center;
+  background-image: url("../assets/imgs/home/Musica/MusicaContent/Musica_Content11.jpg");
+  background-size: contain;
+  background-position: top;
 }
 
 #contenuto h4 {
