Corretto Background Menù

--- a/Musei/src/app/app.scss
+++ b/Musei/src/app/app.scss
@@ -265,8 +265,9 @@
   }
 
   .scroll-content {
-    //background: linear-gradient(to right, #a4b2bc 0%,#eaf0f2 100%);
+
       overflow: hidden;
+      background: linear-gradient(to right, #a4b2bc 0%, #eaf0f2 100%);
     }
 
   .item-block, .toolbar-background {
