--- a/Musei/src/pages/menu/menu.scss
+++ b/Musei/src/pages/menu/menu.scss
@@ -9,6 +9,7 @@ page-menu {
 
     .scroll-content {
       overflow: auto;
+      background: linear-gradient(to right, #a4b2bc 0%, #eaf0f2 100%);
     }
 
     .size-button {
