--- a/Musei/src/pages/mm-mostre/mm-mostre.scss
+++ b/Musei/src/pages/mm-mostre/mm-mostre.scss
@@ -8,50 +8,50 @@ page-mm-mostre {
       background-color: transparent !important;
       background-image: linear-gradient(to top right, rgba(91,73,137,0.7), rgba(225,0,255,0.7));
     }
-  
+
     .sideMenu {
-          background-color: transparent;
+      background-color: transparent;
       color: white;
       height: 20%;
     }
-  
+
     #menu {
       font-size: 7vw;
     }
-  
-      .home-button {
-          background-color: transparent;
-          color: white;
-          margin: 0 2%;
+
+    .home-button {
+      background-color: transparent;
+      color: white;
+      margin: 0 2%;
       float: right;
       height: 20%;
     }
-  
+
     #home-icon {
       font-size: 7vw;
     }
-  
-      .vocal-button {
-          background-color: transparent;
-          color: white;
+
+    .vocal-button {
+      background-color: transparent;
+      color: white;
     }
-  
+
     #vocal {
       font-size: 7vw;
     }
-  
+
     #vocal-off {
       font-size: 7vw;
     }
-  
+
     .museo-content {
-          display: none;
+      display: none;
     }
-  
+
     .button-md {
       box-shadow: none !important;
     }
-  
+
     .card-title {
       font-family: 'Montserrat';
       font-size: 5.5vw;
@@ -62,7 +62,7 @@ page-mm-mostre {
       border-bottom: 1px solid white;
       width: 50%;
     }
-  
+
     .card-subtitle {
       color: white;
       font-family: 'Amiri';
@@ -73,8 +73,8 @@ page-mm-mostre {
       margin: auto;
       line-height: 1em;
   }
-  
-  
+
+
   .container-content {
     width: 100%;
     border-radius: 0;
@@ -83,17 +83,17 @@ page-mm-mostre {
     position: absolute;
     overflow: auto;
   }
-  
+
   #container-contenuto {
     overflow: auto;
     font-size: 3.5vw;
   }
-  
+
   #contenuto {
     text-align: justify;
     font-size: 3.5vw;
   }
-  
+
   #paginaMmMostre.museo_musica {
       // background-image: url("../assets/imgs/home/Musica/MusicaContent/Musica_Content3.jpg");
       // background-size: cover;
@@ -102,8 +102,8 @@ page-mm-mostre {
     background-size: contain;
     background-position: top;
   }
-  
-  h4 {
+
+  .itemFeed h4 {
       background: -webkit-linear-gradient(45deg, rgb(91, 73, 137), rgb(225, 0, 255) 80%);
       -webkit-text-fill-color: transparent;
       -webkit-background-clip: text;
@@ -111,34 +111,198 @@ page-mm-mostre {
       text-transform: uppercase;
       padding-bottom: 10px;
       font-size: 4vw;
+      font-weight: bold;
   }
-  
+
   .itemFeed {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
-  
+
   .itemFeed img {
       width: 50%;
       float: left;
       padding-top: 5px;
       margin-right: 5px;
   }
-  
+
   .dateItem {
     text-transform: uppercase;
-    font-weight: bold;
-    font-size: 3.5vw;
+    //font-weight: bold;
+    font-size: 2.5vw;
     padding-bottom: 10px;
+    color: black;
   }
-  
+  .itemTitle{
+    color: black;
+  }
+
   .card-ios p, .card-md p, .card-wp p {
     font-size: 3.5vw;
+    text-align: justify;
+    text-transform: none;
+    font-weight: normal;
   }
-  
+
   .card-ios h3, .card-ios h4, .card-ios h5, .card-ios h6, .card-md h3, .card-md h4, .card-md h5, .card-md h6, .card-wp h3, .card-wp h4, .card-wp h5, .card-wp h6 {
     font-size: 3.5vw;
   }
-  
+
+  //CSS calendario Eventi
+
+  [col-1] {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 8.33333%;
+    -ms-flex: 0 0 8.33333%;
+    flex: 0 0 14.285714285714286%;
+    width: 14.285714285714286%;
+    max-width: 14.285714285714286%;
   }
-  
+  .col {
+    text-align: center;
+    padding: 5px;
+  }
+  .last-month, .next-month {
+    color: #999999;
+    font-size: 90%;
+  }
+  .currentDate, .otherDate {
+    padding: 5px;
+  }
+  .currentDate {
+    font-weight: bold;
+    background-color: rgb(225, 0, 255);
+    color: white;
+    border-radius: 30px;
+  }
+  .calendar-header {
+    background: -webkit-linear-gradient(45deg, rgb(91, 73, 137), rgb(225, 0, 255) 80%);
+    //background-color: #1a732d;
+    color: #FFFFFF;
+  }
+  .event-bullet {
+    margin: 2px auto;
+    height: 5px;
+    width: 5px;
+    background-color: rgb(91, 73, 137);
+    border-radius: 30px;
+  }
+  .selected-date {
+    width: 20px;
+    height: 2px;
+    background-color: blue;
+  }
+  .unselected-date {
+    border: none;
+  }
+  .calendar-body {
+    .grid {
+      padding: 0;
+    }
+    .col:last-child {
+      border-right: none;
+    }
+    .calendar-weekday, .calendar-date {
+      text-align: center;
+      margin: 0;
+    }
+    .calendar-weekday {
+      font-weight: bold;
+      //border-bottom: solid 1px #1a732d;
+      background-color: rgba(225, 0, 255, 0.5);
+    }
+    .calendar-date {
+      border-top: solid 1px rgb(91, 73, 137);
+      border-bottom: solid 1px rgb(91, 73, 137);
+    }
+  }
+
+  #calendarView {
+    height: 500px;
+    display: block;
+    position: relative;
+    /* position: absolute; */
+  }
+
+  .calendar-weekday .col {
+    color: white;
+  }
+
+  .scrollDiv .scroll-content{
+    overflow: overlay;
+  }
+
+  .list .card{
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+  }
+
+  .itemFeed, .item{
+    background: white;
+  }
+
+  .evento{
+    box-shadow: none;
+  }
+
+  .card-Item-Feed ion-item{
+    padding: 10px;
+  }
+
+  .itemLocation{
+    color: black;
+    font-size: 2.5vw !important;
+    padding-bottom: 5px;
+  }
+
+  ion-card.evento{
+    margin-right: 0;
+    margin-left: 0;
+    width: 100%;
+  }
+
+  .card-Item-Feed{
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+
+  .view_toggle .button{
+    float: right !important;
+    background-color: white;
+    color: lightgray;
+    font-size: 5.5vw;
+    margin: 0.4rem 0.2rem;
+    padding: 0 1em;
+    margin-bottom: 24px;
+    height: auto;
+
+  }
+
+  .view_toggle{
+    overflow: auto;
+  }
+
+  .view_toggle div{
+    position: absolute;
+    top: 10px;
+    display: inline;
+    background: -webkit-linear-gradient(45deg, rgb(91, 73, 137), rgb(225, 0, 255) 80%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+  }
+
+  .view_selected{
+    color:  rgb(225, 0, 255) !important;
+  }
+
+  .addEvent{
+   float: right;
+   background: -webkit-linear-gradient(45deg, rgb(91, 73, 137), rgb(225, 0, 255) 80%);
+   width: 25px;
+   height: 25px;
+   font-size: 5.5vw;
+   color: white;
+  }
+
+}
+
+
