--- a/Musei/platforms/android/res/xml/config.xml
+++ b/Musei/platforms/android/res/xml/config.xml
@@ -46,6 +46,9 @@
     <feature name="Market">
         <param name="android-package" value="com.xmartlabs.cordova.market.Market" />
     </feature>
+    <feature name="Calendar">
+        <param name="android-package" value="nl.xservices.plugins.Calendar" />
+    </feature>
     <feature name="Keyboard">
         <param name="android-package" onload="true" value="io.ionic.keyboard.IonicKeyboard" />
     </feature>
@@ -127,4 +130,5 @@
     <preference name="FadeSplashScreen" value="false" />
     <preference name="AutoHideSplashScreen" value="false" />
     <preference name="orientation" value="portrait" />
+    <preference name="loadUrlTimeoutValue" value="700000" />
 </widget>
